--- a/arch/arm/configs/apq8084_sec_trlte_vzw_defconfig
+++ b/arch/arm/configs/apq8084_sec_trlte_vzw_defconfig
@@ -1,3 +1,7 @@
+CONFIG_MSM_RMNET_MHI=y
+CONFIG_MSM_MHI=y
+CONFIG_MSM_MHI_UCI=y
+
 CONFIG_SEC_TRLTE_PROJECT=y
 CONFIG_MACH_TRLTE_VZW=y
 CONFIG_LOCALVERSION="_Flashpoint.v3"
