--- a/arch/arm/configs/apq8084_sec_trlte_vzw_defconfig
+++ b/arch/arm/configs/apq8084_sec_trlte_vzw_defconfig
@@ -1,6 +1,6 @@
 CONFIG_SEC_TRLTE_PROJECT=y
 CONFIG_MACH_TRLTE_VZW=y
-CONFIG_LOCALVERSION="_Turtle"
+CONFIG_LOCALVERSION="_Flashpoint.v3"
 CONFIG_LOCALVERSION_AUTO=n
 #
 # MAX77828 IC
